--- a/index.html
+++ b/index.html
@@ -9,12 +9,32 @@
     <title>Calculator</title>
 </head>
 <body>
-    <div class="container">
-        <div class="row">
-            <div class="col">1</div>
-            <div class="col">1</div>
-            <div class="col">1</div>
-            <div class="col">1</div>
+    <div class="wrapper">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <input type="button" value="1">
+                    <input type="button" value="1">
+                    <input type="button" value="1">
+                    <input type="button" value="1">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <input type="button" value="1">
+                    <input type="button" value="1">
+                    <input type="button" value="1">
+                    <input type="button" value="1">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <input type="button" value="1">
+                    <input type="button" value="1">
+                    <input type="button" value="1">
+                    <input type="button" value="1">
+                </div>
+            </div>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
