--- a/index.html
+++ b/index.html
@@ -1,43 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <title>Calculator</title>
 </head>
+
 <body>
     <div class="wrapper">
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <input type="button" value="1">
-                    <input type="button" value="1">
-                    <input type="button" value="1">
-                    <input type="button" value="1">
+                    <input type="button" value="√">
+                    <input type="button" value="%">
+                    <input type="button" value="/">
+                    <input type="button" value="C">
+                </div>
+                </div>
+            <div class="row">
+                <div class="col">
+                    <input type="button" value="7">
+                    <input type="button" value="8">
+                    <input type="button" value="9">
+                    <input type="button" value="×">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <input type="button" value="4">
+                    <input type="button" value="5">
+                    <input type="button" value="6">
+                    <input type="button" value="-">
                 </div>
             </div>
             <div class="row">
                 <div class="col">
                     <input type="button" value="1">
-                    <input type="button" value="1">
-                    <input type="button" value="1">
-                    <input type="button" value="1">
+                    <input type="button" value="2">
+                    <input type="button" value="3">
+                    <input type="button" value="+">
                 </div>
             </div>
             <div class="row">
                 <div class="col">
-                    <input type="button" value="1">
-                    <input type="button" value="1">
-                    <input type="button" value="1">
-                    <input type="button" value="1">
+                    <input type="button" value="0">
+                    <input type="button" value=".">
+                    <input id="equal" type="button" value="=">
                 </div>
             </div>
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+        crossorigin="anonymous"></script>
     <script src="script.js"></script>
 </body>
+
 </html>
