--- a/index.html
+++ b/index.html
@@ -14,42 +14,47 @@
 <body>
     <div class="wrapper">
         <div class="container">
-            <div class="row">
+            <div class="row first-row">
                 <div class="col">
-                    <input type="button" value="√">
-                    <input type="button" value="%">
-                    <input type="button" value="/">
-                    <input type="button" value="C">
+                    <input id="screen" type="text" readonly="true" >
+                </div>
+            </div>
+            <div class="row second-row">
+                <div class="col">
+                    <input type="button" id="sqrt" value="√">
+                    <input type="button" id="percentage" value="%">
+                    <input type="button" id="divide" value="/">
+                    <input id="clear" type="button" value="C">
                 </div>
                 </div>
             <div class="row">
                 <div class="col">
-                    <input type="button" value="7">
-                    <input type="button" value="8">
-                    <input type="button" value="9">
-                    <input type="button" value="×">
+                    <input type="button" id="seven" value="7">
+                    <input type="button" id="eight" value="8">
+                    <input type="button" id="nine" value="9">
+                    <input type="button" id="multiply" value="×">
                 </div>
             </div>
             <div class="row">
                 <div class="col">
-                    <input type="button" value="4">
-                    <input type="button" value="5">
-                    <input type="button" value="6">
-                    <input type="button" value="-">
+                    <input type="button" id="four" value="4">
+                    <input type="button" id="five" value="5">
+                    <input type="button" id="six" value="6">
+                    <input type="button" size="subtraction" value="-">
                 </div>
             </div>
             <div class="row">
                 <div class="col">
-                    <input type="button" value="1">
-                    <input type="button" value="2">
-                    <input type="button" value="3">
-                    <input type="button" value="+">
+                    <input type="button" id="one" value="1">
+                    <input type="button" id="two" value="2">
+                    <input type="button" id="three" value="3">
+                    <input type="button" id="add" value="+">
                 </div>
             </div>
             <div class="row">
                 <div class="col">
-                    <input type="button" value="0">
-                    <input type="button" value=".">
+                    <input type="button" id="zero" value="0">
+                    <input type="button" id="dot" value=".">
                     <input id="equal" type="button" value="=">
                 </div>
             </div>
